[metadata]
author = Jordan Cook
url = https://github.com/JWCook/aiohttp-client-cache
description = Persistent cache for aiohttp requests
keywords = aiohttp, async, asyncio, cache, client, http, persistence, requests
license = MIT License
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
python_requires = '>=3.7'
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# Tell mypy to ignore external libraries without type annotations
[mypy]
ignore_missing_imports = True
